Partial fix for DOCS-57: Add collapse/expand chapter in single-page HTML
In fact this affects all the HTML but only really makes sense in single-page HTML. Tested with forgerock-doc-maven-plugin-test.

--- a/forgerock-doc-maven-plugin/trunk/src/main/resources/dfo.css
+++ b/forgerock-doc-maven-plugin/trunk/src/main/resources/dfo.css
@@ -19,25 +19,24 @@
  *
 */
 
-html
-{
-  background: url(http://docs.forgerock.org/css/images/paper-background.png);
-  background-size: 100%;
-  background-position: center;
-  background-repeat: repeat-y;
- }
+html {
+    background: url(http://docs.forgerock.org/css/images/paper-background.png);
+    background-size: 100%;
+    background-position: center;
+    background-repeat: repeat-y;
+}
 
 body {
-  -moz-border-radius: 15px;
-  border-radius: 15px;
-  background-color: #fff;
-  padding: 15px;
-  color: #333;
-  font-family: DejaVu, Verdana, Helvetica, Arial, sans-serif;
-  font-size: 84%; /* 100% would be medium, 16px. */
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 800px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    background-color: #fff;
+    padding: 15px;
+    color: #333;
+    font-family: DejaVu, Verdana, Helvetica, Arial, sans-serif;
+    font-size: 84%; /* 100% would be medium, 16px. */
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
 }
 
 dd,
@@ -49,37 +48,37 @@ p,
 td,
 th,
 ul {
-  font-size: 1em;
+    font-size: 1em;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 a:link {
-  color: #47a;
+    color: #47a;
 }
 
 a:visited {
-  color: #68a;
+    color: #68a;
 }
 
 a:active, a:hover {
-  color: #990000;
+    color: #990000;
 }
 
 .author {
-  font-size: 1em;
-  font-weight: normal;
+    font-size: 1em;
+    font-weight: normal;
 }
 
 code,
 .command>strong,
 div.literallayout,
 .filename {
-  font-family: monospace;
-  font-size: 1.1em;
-  font-weight: normal;
+    font-family: monospace;
+    font-size: 1.1em;
+    font-weight: normal;
 }
 
 code,
@@ -90,86 +89,86 @@ div.literallayout p,
 .filename,
 .term,
 .step {
-  font-weight: normal;
+    font-weight: normal;
 }
 
 h1 {
-  color: #626D75;
-  font-size: 2em;
+    color: #626D75;
+    font-size: 2em;
 }
 
 h2 {
-  color: #333;
-  font-size: 1.8em;
+    color: #333;
+    font-size: 1.8em;
 }
 
 h3 {
-  color: #333;
-  font-size: 1.6em;
+    color: #333;
+    font-size: 1.6em;
 }
 
 h4 {
-  color: #333;
-  font-size: 1.4em;
+    color: #333;
+    font-size: 1.4em;
 }
 
 h5 {
-  color: #333;
-  font-size: 1.2em;
+    color: #333;
+    font-size: 1.2em;
 }
 
 h6 {
-  color: #333;
-  font-size: 1em;
+    color: #333;
+    font-size: 1em;
 }
 
 hr {
-  display: none;
+    display: none;
 }
 
 ul {
-  list-style-image: url("../images/bulletpoint.png");
+    list-style-image: url("../images/bulletpoint.png");
 }
 
 div.refentry h2 {
-  font-size: 1.1em;
+    font-size: 1.1em;
 }
 
 div.refentry h3 {
-  font-size: 1.0em;
+    font-size: 1.0em;
 }
 
 div.navfooter,
 div.navheader,
 div.nukefooter {
-  background-color: #fff;
+    background-color: #fff;
 }
 
 div.navheader {
-  border-bottom: thin solid #ccc;
+    border-bottom: thin solid #ccc;
 }
 
 .navheader th {
-  color: #fff;
-  font-size: 0em;
+    color: #fff;
+    font-size: 0em;
 }
 
 .navheader td,
 .navfooter td,
 .nukefooter td {
-  font-size: 0.8em;
-  font-style: italic;
+    font-size: 0.8em;
+    font-style: italic;
 }
 
 div.abstract,
 div.toc {
-  border: thin dotted #ccc;
-  margin-bottom: 0.25em;
-  margin-top: 0.25em;
-  padding-bottom: 0.25em;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-  padding-top: 0.75em;
+    border: thin dotted #ccc;
+    margin-bottom: 0.25em;
+    margin-top: 0.25em;
+    padding-bottom: 0.25em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    padding-top: 0.75em;
 }
 
 div.important,
@@ -177,14 +176,14 @@ div.caution,
 div.note,
 div.tip,
 div.warning {
-  border: thin dotted #ccc;
-  font-style: italic;
-  margin-bottom: 0.25em;
-  margin-top: 0.25em;
-  padding-bottom: 0.25em;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-  padding-top: 0.25em;
+    border: thin dotted #ccc;
+    font-style: italic;
+    margin-bottom: 0.25em;
+    margin-top: 0.25em;
+    padding-bottom: 0.25em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    padding-top: 0.25em;
 }
 
 div.appendix,
@@ -192,31 +191,31 @@ div.chapter,
 div.index,
 div.preface,
 div.refentry {
-  border-bottom: thin solid #ccc;
+    border-bottom: thin solid #ccc;
 }
 
 img {
-  height: auto;
-  max-width: 640px;
-  max-height: 480px;
+    height: auto;
+    max-width: 640px;
+    max-height: 480px;
 }
 
 table {
-  font-size: 1em;
+    font-size: 1em;
 }
 
 .table-contents {
-  border-bottom: thin solid #ccc;
-  border-spacing: 0.5em;
-  border-top: thin solid #ccc;
+    border-bottom: thin solid #ccc;
+    border-spacing: 0.5em;
+    border-top: thin solid #ccc;
 }
 
 .table-contents thead {
-  text-align: left;
+    text-align: left;
 }
 
 div.table-title {
-  margin-bottom: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 div.abstract-title,
@@ -230,41 +229,40 @@ div.procedure-title,
 div.sidebar-title,
 div.table-title,
 div.toc-title,
-div.variablelist-title
-{
-  font-weight: bold;
+div.variablelist-title {
+    font-weight: bold;
 }
 
 div.synopsis {
-  background-color: #fff;
-  border: thin dashed #ccc;
-  font-family: monospace;
-  font-size: 1.1em;
-  margin-bottom: 1em;
-  padding: 0.5em;
-  white-space: pre;
+    background-color: #fff;
+    border: thin dashed #ccc;
+    font-family: monospace;
+    font-size: 1.1em;
+    margin-bottom: 1em;
+    padding: 0.5em;
+    white-space: pre;
 }
 
-.toggle {
-  position: relative;
-  left: -24px;
-  float: left;
+.toggle, .tocollapse, .toexpand {
+    position: relative;
+    left: -24px;
+    float: left;
 }
 
 .nodisplay {
-  display: none;
+    display: none;
 }
 
 .formalpara-title {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 div.msglevel,
 div.msgorig,
 div.msgaud,
 div.msgexplan {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 span.msgmain-title,
@@ -274,24 +272,24 @@ span.msglevel-title,
 span.msgorig-title,
 span.msgaud-title,
 span.msgexplan-title {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 #footer {
- background-color: cornsilk;
- border-top: thin solid gainsboro;
- clear: both;
- position: fixed;
- bottom: 0;
- text-align: center;
- left: 0;
- right: 0;
- font-size: x-small;
+    background-color: cornsilk;
+    border-top: thin solid gainsboro;
+    clear: both;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    left: 0;
+    right: 0;
+    font-size: x-small;
 }
 
 .syntaxhighlighter
 .toolbar {
-  display: none !important;
+    display: none !important;
 }
 
 .cornerBanner {
